# HW10-py.web

HW10-py.web/: README.md  manage.py  pyproject.toml  requirements.txt  run.sh
HW10-py.web/notes/: asgi.py  settings.py  urls.py  wsgi.py
HW10-py.web/quotes/: apps.py  froms.py  models.py  urls.py  utils.py  views.py
HW10-py.web/quotes/migrations/: 0001_initial.py  0002_author_quote_alter_tag_name_delete_note_quote_tags.py
HW10-py.web/quotes/static/quotes/: style.css
HW10-py.web/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html  tag.html  tag_edit.html
HW10-py.web/users/: forms.py  urls.py  views.py
HW10-py.web/users/migrations/: 0001_initial.py
HW10-py.web/users/templates/users/: login.html  signup.html
HW10-py.web/utils/: __init__.py  json_to_mongodb.py  migration.py
